--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -50,7 +50,7 @@
                          </div>
                         <div class="clearfix">
                             <div class="pull-left">
-                                <div class="form-group check-box">
+                                <div class="form-group check-box pl-4">
                                     <label asp-for="Input.RememberMe" class="form-label">
                                         <input class="form-check-input" asp-for="Input.RememberMe" />
                                         Beni Hatırla...
