--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -152,49 +152,48 @@
         $(document).ready(function () {
             var currentState = 0;
             $('#currentState').val("0");
-
-                setTimeout(function () {
-                    if (currentState === 0) {
-                        currentState = 1;
-                        $.ajax({
-                            type: "GET",
-                            url: "/Shop/_PartialPopularProductsWidget",
-                            async: true,
-                            success: function (result) {
-                                $("#popular-products-div").html(result);
+            // Popular products swiper init
+            setTimeout(function () {
+                if (currentState === 0) {
+                    currentState = 1;
+                    $.ajax({
+                        type: "GET",
+                        url: "/Shop/_PartialPopularProductsWidget",
+                        async: true,
+                        success: function (result) {
+                            $("#popular-products-div").html(result);
             
-                                setTimeout(function () {
-                                    new Swiper('.swiper', {
-                                        slidesPerView: 1,
-                                        spaceBetween: 20,
-                                        loop: true,
-                                        autoplay: {
-                                            delay: 4000,
-                                            disableOnInteraction: false,
-                                        },
-                                        breakpoints: {
-                                            576: { slidesPerView: 2 },
-                                            768: { slidesPerView: 3 },
-                                            992: { slidesPerView: 4 }
-                                        }
-                                    });
-                                }, 100); // short wait for DOM render
-                            }
-                        });
-                    }
-                }, 2000); // Load after 2 seconds
+                            setTimeout(function () {
+                                new Swiper('.swiper', {
+                                    slidesPerView: 1,
+                                    spaceBetween: 20,
+                                    loop: true,
+                                    autoplay: {
+                                        delay: 4000,
+                                        disableOnInteraction: false,
+                                    },
+                                    breakpoints: {
+                                        576: { slidesPerView: 2 },
+                                        768: { slidesPerView: 3 },
+                                        992: { slidesPerView: 4 }
+                                    }
+                                });
+                            }, 100); // short wait for DOM render
+                        }
+                    });
+                }
+            }, 1000); 
 
+            // decide whether display pagination iaw window length
             lastWidth = window.innerWidth;
             if (window.innerWidth >= 992)
             {
                 $("#pagination-list").css("display","block");
-
             }
             else
             {
                 $("#mobileFilterButton").css("display","block");
                 $(".styled-pagination").remove();
-
             }
            
             //initialize nav active line
@@ -221,7 +220,7 @@
                     let minPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 0);
                     let maxPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 1);
                     const nextPage = currentPage + 1;
-                    console.log("getting");
+
                     $.ajax({
                         type: "GET",
                         url: "/Shop/ShopFiltered",
@@ -264,7 +263,7 @@
                 let maxPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 1);
                 let pageNumber = parseInt($("#page-number").val()) + 1;
                 var button = $(this);
-
+                $(".filter-button").prop("disabled",true);
                 $.ajax({
                     type: "GET",
                     url: "/Shop/ShopFiltered",
@@ -277,6 +276,7 @@
                         maxPrice: maxPrice,
                     },
                     success: function (response) {
+                        $(".filter-button").prop("disabled",false);
                         $("#product-content").html(response);
                         $("#page-number").val(pageNumber);
                          if (window.innerWidth < 992)
@@ -285,8 +285,8 @@
                              }
                     },
                     error: function (xhr) {
+                        $(".filter-button").prop("disabled",false);
                         var response = JSON.parse(xhr.responseText);
-                     
                         showAlert(button,response.message, "danger");
                     }
                 });
@@ -300,7 +300,7 @@
                 let maxPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 1);
                 let pageNumber = parseInt($("#page-number").val()) - 1;
                 var button = $(this);
-
+                $(".filter-button").prop("disabled",true);
                 $.ajax({
                     type: "GET",
                     async: true,
@@ -313,6 +313,7 @@
                         maxPrice: maxPrice,
                     },
                     success: function (response) {
+                        $(".filter-button").prop("disabled",false);
                         $("#product-content").html(response);
                         $("#page-number").val(pageNumber);
                          if (window.innerWidth < 992)
@@ -321,8 +322,8 @@
                              }
                     },
                     error: function (xhr) {
+                         $(".filter-button").prop("disabled",false);
                         var response = JSON.parse(xhr.responseText);
-                        
                         showAlert(button,response.message, "danger");
                     }
                 });
@@ -336,7 +337,7 @@
                 let maxPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 1);
                 let pageNumber = parseInt($(this).data("number"));
                 var button = $(this);
-
+                 $(".filter-button").prop("disabled",true);
                 $.ajax({
                     type: "GET",
                     async: true,
@@ -349,9 +350,9 @@
                         maxPrice: maxPrice,
                     },
                     success: function (response) {
+                         $(".filter-button").prop("disabled",false);
                         $("#product-content").html(response);
                         $("#page-number").val(pageNumber);
-                        $(".pagination-number").removeClass("active");
                         button.addClass("active");
                          if (window.innerWidth < 992)
                              {
@@ -359,8 +360,8 @@
                              }
                     },
                     error: function (xhr) {
+                         $(".filter-button").prop("disabled",false);
                         var response = JSON.parse(xhr.responseText);
-                        
                         showAlert(button,response.message, "danger");
                     }
                 });
@@ -374,7 +375,7 @@
                 let maxPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 1);
                 
                 var button = $(this);
-
+                 $(".filter-button").prop("disabled",true);
                 $.ajax({
                     type: "GET",
                     async: true,
@@ -388,6 +389,7 @@
                     },
                     success: function (response) {
                         $("#product-content").html(response);
+                         $(".filter-button").prop("disabled",false);
                          if (window.innerWidth < 992)
                              {
                                  $(".styled-pagination").remove();
@@ -395,7 +397,7 @@
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
-
+                         $(".filter-button").prop("disabled",false);
                         showAlert(button,response.message, "danger");
                     }
                 });
@@ -408,7 +410,7 @@
                 let searchString = $(`${visibleSidebar} .product-search`).val();
                 let minPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 0);
                 let maxPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 1);
-
+                 $(".filter-button").prop("disabled",false);
                 var button = $(this);
 
 
@@ -429,11 +431,11 @@
                              {
                                  $(".styled-pagination").remove();
                              }
+                              $(".filter-button").prop("disabled",true);
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
-
-
+                         $(".filter-button").prop("disabled",true);
                         showAlert(button,response.message, "danger");
                     }
                 });
@@ -448,7 +450,7 @@
                 let maxPrice = $(`${visibleSidebar} .price-range-slider`).slider("values", 1);
                 var button = $(this);
                 var clickedItem = $(this).parent();
-
+                 $(".filter-button").prop("disabled",true);
                 $.ajax({
                     type: "GET",
                     async: true,
@@ -464,6 +466,7 @@
                         $("#product-content").html(response);
                         $(".filter-by-catalog-list").removeClass("active-category");
                         clickedItem.addClass("active-category");
+                         $(".filter-button").prop("disabled",false);
                  if (window.innerWidth < 992)
                              {
                                  $(".styled-pagination").remove();
@@ -472,7 +475,7 @@
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
-                        
+                         $(".filter-button").prop("disabled",false);
                         showAlert(button,response.message, "danger");
                     }
                 });
@@ -485,7 +488,7 @@
                 var price = parseFloat($(this).closest('.clearfix').find('.total-price').val());
                 var quantity = parseInt($(this).closest('.clearfix').find('.quantity').val());
                 var button = $(this);
-
+                 $(".add-to-cart").text("işlem yapılıyor...").prop("disabled",true);
                 $.ajax({
                     type: "POST",
                     url: "/Cart/AddToCart",
@@ -498,6 +501,8 @@
                         quantity: quantity
                     },
                     success: function (response) {
+                         $(".filter-button").prop("disabled",false);
+                          $(".add-to-cart").text("Sepete Ekle").prop("disabled",false);
                         if(response.success){
                             showAlert(button, response.message, "success");
                             let currentItem = response.totalProduct;
@@ -511,8 +516,9 @@
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
-               
+                        $(".filter-button").prop("disabled",false);
                         showAlert(button, response.message, "danger");
+                        $(".add-to-cart").text("Sepete Ekle").prop("disabled",false);
                     }
                 });
             });
@@ -523,7 +529,7 @@
                 var price = parseFloat($(this).closest('.clearfix').find('.total-price').val());
                 var quantity = parseInt($(this).closest('.clearfix').find('.quantity').val());
                 var button = $(this);
-
+                 $(".add-to-inquiry").text("işlem yapılıyor...").prop("disabled",true);
                 $.ajax({
                     type: "POST",
                     url: "/Cart/AddToInquiry",
@@ -536,6 +542,7 @@
                         quantity: quantity
                     },
                     success: function (response) {
+                        $(".add-to-inquiry").text("Talep Oluştur").prop("disabled",false);
                         if(response.success){
                             showAlert(button, response.message, "success");
                             let currentItem = response.totalProduct;
@@ -549,29 +556,13 @@
                     },
                     error: function (xhr) {
                         var response = JSON.parse(xhr.responseText);
-
+                         $(".add-to-inquiry").text("Talep Oluştur").prop("disabled",false);
                         showAlert(button, response.message, "danger");
                     }
                 });
             });
-
-            // Close button handler
-            // document.getElementById("closeMobileSidebar").addEventListener("click", function () {
-            //     document.getElementById("mobileFilterSidebar").classList.remove("active");
-            // });
-
-            // Close when clicking outside of the sidebar
-            // document.addEventListener("click", function (event) {
-            //     const sidebar = document.getElementById("mobileFilterSidebar");
-            //     const isClickInside = sidebar.contains(event.target);
-
-            //     if (!isClickInside && sidebar.classList.contains("active")) {
-            //         sidebar.classList.remove("active");
-            //     }
-            // });
-          
         });
-
+        //show mobile filter button for mobile screens
         function toggleMobileFilter() {
             const sidebar = document.getElementById("mobileFilterSidebar");
             sidebar.classList.toggle("active");
@@ -595,7 +586,7 @@
                 }
             });
         });
-
+        //if resize window show filter menus accordingly
          window.addEventListener('resize', () => {
              const sidebarMobile = document.getElementById("mobileFilterSidebar");
              const sidebarPc = document.getElementById("pcFilterSidebar");
@@ -621,7 +612,7 @@
              }
                
          });
-                 function renderPagination(currentPage, totalPages) {
+         function renderPagination(currentPage, totalPages) {
             let html = `<div class="row clearfix"> <ul class="styled-pagination text-center" id="pagination-list">`;
 
             if (currentPage > 1) {
